tests/macros/editor/choices.stderr
error: option `choices` does not exist for kind `editor`
 --> $DIR/choices.rs:2:36
  |
2 |     discourse::questions![Editor { choices: todo!() }];
  |                                    ^^^^^^^
