tests/macros/editor/choices.rs
fn main() {
    discourse::questions![Editor { choices: todo!() }];
}
